--- a/ESurvey.Entity/ESurvey.Entity.csproj
+++ b/ESurvey.Entity/ESurvey.Entity.csproj
@@ -72,6 +72,9 @@
     <Compile Include="AspNetUsers.cs">
       <DependentUpon>SurveyModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="C__MigrationHistory.cs">
+      <DependentUpon>SurveyModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionAnswers.cs">
       <DependentUpon>SurveyModel.tt</DependentUpon>
@@ -108,17 +111,18 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
+    <None Include="packages.config" />
     <EntityDeploy Include="SurveyModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>SurveyModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.Config" />
-    <None Include="packages.config" />
     <None Include="SurveyModel.edmx.diagram">
       <DependentUpon>SurveyModel.edmx</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="SurveyModel.Context.tt">
@@ -131,9 +135,6 @@
       <DependentUpon>SurveyModel.edmx</DependentUpon>
       <LastGenOutput>SurveyModel.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
