--- a/ESurvey.Common/ESurvey.Common.csproj
+++ b/ESurvey.Common/ESurvey.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1AF7FE88-5B91-4F44-9316-9B53503DBCC5}</ProjectGuid>
+    <ProjectGuid>{9C94F0E1-6935-441C-85C5-494AA423CA93}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ESurvey.BL</RootNamespace>
-    <AssemblyName>ESurvey.BL</AssemblyName>
+    <RootNamespace>ESurvey.Common</RootNamespace>
+    <AssemblyName>ESurvey.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,28 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Concrete\SurveyAccessManager.cs" />
-    <Compile Include="Concrete\SurveyEditor.cs" />
-    <Compile Include="Mappers\AnswerMapper.cs" />
-    <Compile Include="Mappers\QuestionMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Abstract\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ESurvey.DAL\ESurvey.DAL.csproj">
-      <Project>{c3c79d64-e972-4d38-84d8-feb0ae9cc5b4}</Project>
-      <Name>ESurvey.DAL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ESurvey.Entity\ESurvey.Entity.csproj">
-      <Project>{24f21c1f-7918-4486-9879-2e39dd0f72de}</Project>
-      <Name>ESurvey.Entity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ESurvey.UIModels\ESurvey.UIModels.csproj">
-      <Project>{4351602b-706d-4344-83b4-92f6a5756cb9}</Project>
-      <Name>ESurvey.UIModels</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
