--- a/ESurvey.Console/App.config
+++ b/ESurvey.Console/App.config
@@ -4,7 +4,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="ESurveyEntities" connectionString="metadata=res://*/SurveyModel.csdl|res://*/SurveyModel.ssdl|res://*/SurveyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=ESurvey;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -15,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ESurveyEntities" connectionString="metadata=res://*/SurveyModel.csdl|res://*/SurveyModel.ssdl|res://*/SurveyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=ESurvey;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
