--- a/ESurvey.WebUI/packages.config
+++ b/ESurvey.WebUI/packages.config
@@ -4,7 +4,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
+  <package id="jQuery.ValsurveyIdation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net452" />
@@ -25,8 +25,8 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.1" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.ProvsurveyIders.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.ValsurveyIdation" version="3.1.1" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
