--- a/ESurvey.WebUI/Web.config
+++ b/ESurvey.WebUI/Web.config
@@ -65,6 +65,9 @@
   </runtime>
 <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=ESurvey;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  
+    <add name="ESurveyEntities" connectionString="metadata=res://*/SurveyModel.csdl|res://*/SurveyModel.ssdl|res://*/SurveyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=ESurvey;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  
   </connectionStrings><appSettings>
     <add key="owin:AppStartup" value="IdentitySample.Startup,ESurvey.WebUI" />
     <add key="webpages:Version" value="3.0.0.0" />
