--- a/ESurvey.Debug/App.config
+++ b/ESurvey.Debug/App.config
@@ -21,4 +21,12 @@
     <add name="ESurveyEntities" connectionString="metadata=res://*/SurveyModel.csdl|res://*/SurveyModel.ssdl|res://*/SurveyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=ESurvey;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=ESurvey;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
