--- a/ESurvey.UIModels/ESurvey.UIModels.csproj
+++ b/ESurvey.UIModels/ESurvey.UIModels.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Request.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SurveyEditor\AddQuestionUiModel.cs" />
     <Compile Include="SurveyEditor\AnswerUIModel.cs" />
     <Compile Include="SurveyEditor\QuestionListUiModel.cs" />
     <Compile Include="SurveyEditor\QuestionUIModel.cs" />
