--- a/ESurvey.WebUI/ESurvey.WebUI.csproj
+++ b/ESurvey.WebUI/ESurvey.WebUI.csproj
@@ -221,6 +221,7 @@
     <Content Include="scripts\angapps\adminapp.js" />
     <Content Include="scripts\angapps\editorApp.js" />
     <Content Include="scripts\angapps\questionListController.js" />
+    <Content Include="scripts\angapps\questionCreatorController.js" />
     <Content Include="scripts\angapps\surveyDetailsEditor.js" />
     <Content Include="scripts\angular-mocks.js" />
     <Content Include="scripts\angular-resource.js" />
@@ -248,6 +249,7 @@
     <Content Include="Views\Editor\EditSurvey.cshtml" />
     <Content Include="Views\Editor\SurveyDetailsForm.cshtml" />
     <Content Include="Views\Editor\_QuestionListTemplate.cshtml" />
+    <Content Include="Views\Editor\_CreateQuestionTemplate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
